--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ ios/Pods
 /ios/Pods
 /ios/Pods/mapsted-sdk-core
 /ios/Pods/mapsted-sdk-core/MapstedCore.framework
+android/.gradle
+android/app/build
+android/.gradle/8.6
