--- a/ios/dempMapstedSampleApp/Info.plist
+++ b/ios/dempMapstedSampleApp/Info.plist
@@ -34,7 +34,9 @@
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>allow bluetooth to function app</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Your location use description goes here</string>
+  <key>NSMotionUsageDescription</key>
+    <string>Your motion use description goes here</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
